# modula_modbus

./: .gitignore  Dockerfile  Modula_modbus.py  Modula_modbus_server.py  Pipfile  README.md  Registros_Modula.py  config.py  docker_config.toml  odoo_client.py  omron_modbus.py  pyproject.toml  registros_omron.py  setup.py
modula/: Modula_modbus.py  Registros_Modula.py
modula_modbus/: __init__.py  config.py  main.py  modula_data_bank.py  modula_modbus_server.py  odoo_client.py
